# fastapi-template

./: .editorconfig  Dockerfile  Dockerfile.k8s  Dockerfile.lambda  Readme.md  docker-deployment.k8.yaml  lambda_handler.py  local.yaml  pyproject.toml  run-dev.sh
app/: dependencies.py  main.py
app/repositories/: repository.py
app/routes/: items.py  sample_crud.py  users.py
app/routes/v1/: api.py
app/routes/v1/endpoints/: sample_crud.py
tests/: test_items.py  test_main.py  test_sample_string.py  test_users.py
